--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "savarrior",
-  "homepage": "https://savarriorty.netlify.app/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
